--- a/guides/getting-started/common-assertions.mdx
+++ b/guides/getting-started/common-assertions.mdx
@@ -1,315 +1,287 @@
 ---
-title: "Understanding Assertions and Test Results"
-description: "Explore the most useful assertions in GoogleTest, how to verify expected values and conditions, and interpret test runner output for both passing and failing tests."
+title: "Using Assertions for Powerful Testing"
+description: "Explore how to use GoogleTest’s robust and expressive set of assertions, including equality, inequality, floating-point, and exception assertions. Practical scenarios illustrate when and how to choose the right assertion for your needs."
 ---
 
-# Understanding Assertions and Test Results
+# Using Assertions for Powerful Testing
 
-Explore the most useful assertions in GoogleTest, how to verify expected values and conditions, and interpret test runner output for both passing and failing tests.
-
----
-
-## Overview
-
-This guide helps you master assertions in GoogleTest, enabling you to write tests that clearly verify conditions and understand test output success or failure. You'll learn which assertions to use for your verification needs, how to interpret different test results, and how to make failure messages clear and actionable.
-
-> GoogleTest’s assertion macros form the backbone of writing effective tests by verifying expected values or conditions and reporting results for you.
-
-
-## Prerequisites
-
-- GoogleTest installed and configured in your development environment.
-- Your source files including GoogleTest header: `#include <gtest/gtest.h>`.
-- Basic familiarity with writing simple tests (`TEST`, `TEST_F`) in GoogleTest.
-
-
-## Expected Outcome
-
-- Ability to select appropriate assertions to verify expectations.
-- Know how to handle both fatal and nonfatal assertion failures.
-- Understand special assertions like `SUCCEED()`, `FAIL()`, and how to use scoped traces.
-- Interpret test runner output to quickly identify failing tests and their causes.
-
-## Time Estimate
-
-About 15-30 minutes to read and practice based on your familiarity with GoogleTest.
-
-## Difficulty Level
-
-Beginner to Intermediate
+Explore how to use GoogleTest’s robust and expressive set of assertions, including equality, inequality, floating-point, and exception assertions. Practical scenarios illustrate when and how to choose the right assertion for your needs.
 
 ---
 
-## 1. Purpose and Types of Assertions
+## 1. Introduction to Assertions
 
-GoogleTest provides a rich set of macros to help you verify program state during tests. Assertions come in pairs:
+In GoogleTest, assertions are your primary tools for verifying that your code behaves as expected. An assertion evaluates conditions during test execution and signals success or failure.
 
-- **Fatal Assertions (`ASSERT_`):** On failure, abort the current test function immediately.
-- **Nonfatal Assertions (`EXPECT_`):** On failure, record the failure but continue executing the current function.
+- **Assertion Types**:
+  - `EXPECT_` assertions log nonfatal failures, allowing your test to continue.
+  - `ASSERT_` assertions log fatal failures, aborting the current test function immediately.
 
-This allows fine control over whether a failure should halt test execution or not.
+Use assertions to validate actual results against expected outcomes, catching bugs early and providing clear diagnostic information.
 
-### 1.1 Explicit Success and Failure
-
-- **`SUCCEED()`**: Explicitly mark a step or condition as successful. Does NOT make the entire test succeed but can be used for documentation or clarity.
-
-- **`FAIL()`**: Causes a fatal failure and immediately returns from the current function. Only usable in `void` functions.
-
-- **`ADD_FAILURE()`**: Records a nonfatal failure but continues test execution.
-
-### Example:
-```cpp
-switch (state) {
-  case 1:
-    ...
-    break;
-  default:
-    FAIL() << "Reached unexpected state.";
-}
-```
 
 ---
 
-## 2. Common Assertions for Condition Verification
+## 2. Types of Assertions and When to Use Them
+
+GoogleTest provides a variety of assertion macros tailored to common programming needs. Select assertions based on the nature of the check and the desired control flow.
 
 ### 2.1 Boolean Conditions
 
 - **`EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`**
+  - Use when you want to verify a condition evaluates to true.
 - **`EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`**
+  - Use when you want to verify a condition evaluates to false.
 
-Verify that a condition holds true or false respectively.
+### 2.2 Equality and Inequality
 
-### 2.2 Equality and Comparison
+- **`EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)`**
+  - Confirm that two values are equal.
+- **`EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)`**
+  - Confirm that two values are not equal.
+- Use these for scalar values, pointers (checking addresses), and objects implementing `operator==`.
 
-Use `EXPECT_EQ`, `EXPECT_NE`, `EXPECT_LT`, `EXPECT_LE`, `EXPECT_GT`, `EXPECT_GE` and their `ASSERT_` variants to compare values.
+### 2.3 Relational Comparisons
+
+For order-based checks on numeric data:
+
+- `EXPECT_LT`, `EXPECT_LE`, `EXPECT_GT`, `EXPECT_GE`
 
 Example:
 ```cpp
-EXPECT_EQ(result, expected) << "Result did not match expected";
-ASSERT_LT(actual_value, threshold);
+EXPECT_LT(computed_result, threshold);
 ```
 
-Note:
-- For C strings, use `EXPECT_STREQ` and related macros for content comparison.
-- Pointers are compared by address, not the content.
+### 2.4 String Comparisons
 
-### 2.3 String Comparisons
+Specialized macros exist for comparing C-style strings:
 
-- `EXPECT_STREQ`, `EXPECT_STRNE`: Compare C strings by content.
-- `EXPECT_STRCASEEQ`, `EXPECT_STRCASENE`: Compare case-insensitively.
+- `EXPECT_STREQ(str1, str2)`: Compares C strings for equality.
+- `EXPECT_STRNE(str1, str2)`: Compares C strings for inequality.
+- Case-insensitive variants: `EXPECT_STRCASEEQ`, `EXPECT_STRCASENE`.
 
-### 2.4 Floating-Point Comparisons
+For C++ string objects, use the regular equality macros.
 
-- `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`: Verify floating-point equality with tolerance based on ULPs.
-- `EXPECT_NEAR(val1, val2, abs_error)`: Verify values are within absolute error.
+### 2.5 Floating-Point Comparisons
 
-### 2.5 Exception Assertions
+Due to precision limits, direct equality is usually inappropriate for floats/doubles.
 
-Verify code throws or doesn't throw exceptions.
+- **`EXPECT_FLOAT_EQ(val1, val2)`**
+- **`EXPECT_DOUBLE_EQ(val1, val2)`**
+- **`EXPECT_NEAR(val1, val2, abs_error)`**: asserts values are within specified absolute error.
+
+Prefer these over simple equality to avoid flaky tests caused by floating-point rounding.
+
+### 2.6 Exception Assertions (If enabled)
+
+For environments with exception support, assert whether code segments throw exceptions:
+
 - `EXPECT_THROW(statement, ExceptionType)`
 - `EXPECT_ANY_THROW(statement)`
 - `EXPECT_NO_THROW(statement)`
 
----
-
-## 3. Writing Assertions with Custom Messages
-
-All assertions support streaming a custom failure message with `<<` operator:
-
-```cpp
-EXPECT_TRUE(is_valid) << "Validation failed for input: " << input_val;
-```
-
-The streamed message will appear in failure output, helping clarify issues.
-
-**Tip:** Use expressive messages to speed diagnosis when a test fails.
-
----
-
-## 4. Advanced Assertions: Predicate and Predicate-Format
-
-### 4.1 Predicate Assertions
-
-If you have functions or functors that return `bool`, you can check them with predicate assertions:
-
-```cpp
-EXPECT_PRED2(MutuallyPrime, a, b);
-```
-
-If the predicate evaluates to false, GoogleTest reports actual argument values.
-
-### 4.2 Predicate-Formatter Assertions
-
-When you need customized failure messages or your predicates can’t stream directly, use predicate formatters that return `testing::AssertionResult`, for example:
-
-```cpp
-testing::AssertionResult IsEven(const char* expr, int n) {
-  return (n % 2) == 0 ? testing::AssertionSuccess() : testing::AssertionFailure() << expr << " is not even";
-}
-
-EXPECT_PRED_FORMAT1(IsEven, value);
-```
-
-This gives fine control over error handling and messaging.
-
----
-
-## 5. Handling Fatal Failures in Subroutines
-
-By default, fatal assertions (`ASSERT_*`) fail the current function but do not abort the entire test. GoogleTest provides tools to propagate or detect fatal failures:
-
-- **`ASSERT_NO_FATAL_FAILURE(statement)`**: Verifies `statement` does not generate fatal failures.
-- **`HasFatalFailure()`** (in `testing::Test`): Returns true if the current test has a fatal failure so far.
-
-Example of usage to abort early if subroutine failed:
-
-```cpp
-SubroutineThatMayFail();
-if (testing::Test::HasFatalFailure()) return;
-// Continue only if no fatal failure
-```
-
-Alternatively, you can throw exceptions on failure by adding an event listener that throws when an assertion fails.
-
----
-
-## 6. Viewing and Understanding Test Results
-
-### 6.1 TestPartResult
-
-`TestPartResult` represents the outcome of a single assertion or explicit success/failure:
-
-- `kSuccess`: Passed assertion.
-- `kNonFatalFailure`: Failed assertion but test continues.
-- `kFatalFailure`: Failed and test should be aborted.
-- `kSkip`: Skipped assertion/test part.
-
-You can query these states via `passed()`, `failed()`, `fatally_failed()`, `nonfatally_failed()`, or `skipped()`.
-
-### 6.2 TestResult
-
-Each test has a `TestResult` which aggregates all `TestPartResults` and test properties, provides elapsed time and summary methods like `Passed()`, `Failed()`, `Skipped()`, `HasFatalFailure()`, and `HasNonfatalFailure()`.
-
-### 6.3 Console Output Format
-
-GoogleTest's console prints colorful status messages:
-
-- `[ RUN      ]`: Test started
-- `[       OK ]`: Test passed
-- `[  FAILED  ]`: Test failed
-- `[  SKIPPED ]`: Test skipped
-
-Failures show detailed messages with file/line info and assertion explanation.
-
-### 6.4 XML and JSON Reports
-
-GoogleTest can save detailed test output as XML or JSON using the `--gtest_output` flag, helpful for CI systems.
-
-Example of an XML snippet for a test failure:
-
-```xml
-<testcase name="TestName" file="test.cpp" line="42" status="run" time="0.017" classname="TestSuite">
-  <failure message="Expected equality of these values..." type="">
-    <![CDATA[... detailed message ...]]>
-  </failure>
-</testcase>
-```
-
----
-
-## 7. Tips and Best Practices
-
-- **Use `EXPECT_` macros in tests where failure should allow cleanup or further checks.** Use `ASSERT_` when continuation is meaningless after failure.
-- **Use `SCOPED_TRACE` to add context when calling test helpers or inside loops.** It adds trace points to failure messages which help to pinpoint failures.
-
 Example:
-
 ```cpp
-SCOPED_TRACE("iteration " << i);
-EXPECT_EQ(foo(i), expected);
+EXPECT_THROW(foo.DoWork(), std::runtime_error);
 ```
 
-- **Do not put fatal assertions in constructors or destructors.** Instead, use `SetUp()` and `TearDown()`.
-- **Use value-parameterized or typed tests for testing multiple inputs or types efficiently.**
-- **In death tests, follow the naming convention for test suites ending with "DeathTest" to ensure correct execution order and thread-safety.**
-- **Capture and stream custom failure messages for improved debugging.**
 
 ---
 
-## 8. Troubleshooting Common Assertion Issues
+## 3. Using Assertions in Your Tests: Practical Tips
 
-- **Failing Fatal Assertions Not Aborting Test:** Ensure the function is `void` and `ASSERT_` is used appropriately. Use `HasFatalFailure()` or `ASSERT_NO_FATAL_FAILURE()` to detect subroutine failures.
-- **Wrong Pointer Comparisons for C-Strings:** Use `EXPECT_STREQ` and related string comparison assertions.
-- **Strange Output of Floating-Point Comparisons:** Prefer `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ` over `EXPECT_EQ` for floats/doubles to handle rounding.
-- **Confusing Error Message:** Stream custom messages or use predicate format assertions for clarity.
+Follow these practical steps to effectively verify your code using assertions.
+
+### Step 1: Identify What to Check
+
+Think about the behavior or output your test should verify. Common examples:
+
+- Validating return values from functions
+- Confirming changes in object state
+- Testing that exceptions are thrown for invalid inputs
+
+### Step 2: Choose the Most Specific Assertion
+
+Use equality assertions if your test requires exact matches.
+
+Use predicate assertions if conditions are complex or require customized evaluation.
+
+Use `EXPECT_*` if you want to continue testing after failure, `ASSERT_*` to stop immediately.
+
+### Step 3: Add Clear Failure Messages
+
+For better diagnostics, append explanatory messages to assertions:
+
+```cpp
+EXPECT_EQ(result, expected) << "Result did not match expected for input " << input_value;
+```
+
+This enhanced message helps quickly pinpoint issues.
+
+### Step 4: Group Related Assertions in Test Cases
+
+Group logically related checks inside a single `TEST` or `TEST_F`. Use multiple assertions to understand multiple aspects of the test without immediate aborts.
+
 
 ---
 
-## 9. Practical Examples
+## 4. Examples of Common Assertions
 
-### 9.1 Comparing Values with Assertions
+### 4.1 Comparing Integers
 
 ```cpp
-TEST(FooTest, BasicComparisons) {
-  int x = ComputeValue();
-  EXPECT_EQ(x, 42) << "Computation returned unexpected value.";
-  EXPECT_TRUE(x > 0);
-  EXPECT_FALSE(x < 0);
+TEST(MathTest, Factorial) {
+  int result = Factorial(5);
+  EXPECT_EQ(result, 120) << "Factorial(5) should be 120";
 }
 ```
 
-### 9.2 Using String Comparison Assertions
+### 4.2 Comparing Floating-Point Values
 
 ```cpp
-const char* s1 = GetString1();
-const char* s2 = GetString2();
-EXPECT_STREQ(s1, s2) << "Strings do not match";
-```
-
-### 9.3 Floating-Point Equality with Tolerance
-
-```cpp
-float a = CalculateFloatA();
-float b = CalculateFloatB();
-EXPECT_FLOAT_EQ(a, b);
-```
-
-### 9.4 Using `SCOPED_TRACE` in Loops to Add Context
-
-```cpp
-for (int i = 0; i < 10; ++i) {
-  SCOPED_TRACE(testing::Message() << "i=" << i);
-  EXPECT_TRUE(CheckCondition(i));
+TEST(MathTest, SquareRoot) {
+  double sqrt_2 = std::sqrt(2.0);
+  EXPECT_NEAR(sqrt_2 * sqrt_2, 2.0, 1e-6) << "Approximate equality expected";
 }
 ```
 
-### 9.5 Handling Failures in Subfunctions
+### 4.3 String Equality
 
 ```cpp
-void CheckPositive(int n) {
-  ASSERT_GT(n, 0) << "Value is not positive";
-}
-
-TEST(NumbersTest, PositiveCheck) {
-  CheckPositive(-1);
-  if (::testing::Test::HasFatalFailure()) return;
-  ... further checks ...
+TEST(StringTest, CompareCStrings) {
+  const char* greeting = "Hello";
+  EXPECT_STREQ(greeting, "Hello") << "Greeting string mismatch";
 }
 ```
+
+### 4.4 Throwing Exceptions
+
+```cpp
+TEST(ExceptionTest, ThrowsOnInvalidInput) {
+  EXPECT_THROW(ParseInput("invalid"), std::invalid_argument);
+  EXPECT_NO_THROW(ParseInput("valid"));
+}
+```
+
+### 4.5 Complex Predicate Assertions
+
+Use `EXPECT_THAT` and gMock matchers for fine-grained checks:
+
+```cpp
+#include <gmock/gmock.h>
+using ::testing::HasSubstr;
+...
+EXPECT_THAT(response_message, HasSubstr("success"));
+```
+
 
 ---
 
-## 10. Additional Resources
+## 5. Best Practices and Common Pitfalls
 
-- [GoogleTest Assertions Reference](reference/assertions.md)
-- [Advanced Topics on Assertions and Failures](guides/advanced.md#more-assertions)
-- [Writing Your First Test with GoogleTest](guides/getting-started/writing-your-first-test)
-- [Understanding Mocks and Matchers](guides/mocking-techniques/creating-mocks)
-- [Handling Death Tests](guides/writing-effective-tests/death-tests)
-- Official GoogleTest GitHub repository: https://github.com/google/googletest
+- Use `EXPECT_` assertions for non-fatal checks that allow you to see multiple failures before test exits.
+- Use `ASSERT_` assertions to stop tests early when continuing makes no sense or risks crashes.
+- Avoid over-specifying match conditions; keep tests robust but meaningful.
+- Prefer floating-point specific assertions over plain equality for numerical values.
+- Provide helpful failure messages to ease troubleshooting.
+- Use gMock matchers with `EXPECT_THAT` for expressive and readable assertions.
+- Be cautious about side effects in expressions passed to assertions.
+
 
 ---
 
-## Summary
-This guide presents the essential assertions you'll use to verify your test expectations in GoogleTest, explain how to choose between fatal and nonfatal failures, and interpret test output for successful and failing tests. It demonstrates practical usage with simple examples, how to write clearer failure messages, and best practices to organize tests and handle assertion failures gracefully. Use this knowledge to write more robust and maintainable tests.
+## 6. Troubleshooting Failed Assertions
 
+- **Common Issue**: Assertion unexpectedly fails due to slight floating-point differences.
+  - **Solution**: Switch to `EXPECT_NEAR` or `EXPECT_FLOAT_EQ` / `EXPECT_DOUBLE_EQ`.
+
+- **Common Issue**: Assertion fails but test continues unexpectedly.
+  - **Solution**: Replace `EXPECT_` with `ASSERT_` if subsequent test code depends on this check.
+
+- **Common Issue**: Confusing output due to missing or unclear failure messages.
+  - **Solution**: Append explanatory messages using `<<` operator.
+
+- **Common Issue**: Comparing pointers using `EXPECT_EQ` but actual contents differ.
+  - **Solution**: Use appropriate comparisons for contents, or string assertions for strings.
+
+- **Common Issue**: Exceptions tests fail because exceptions are disabled in build.
+  - **Solution**: Verify compiler and build settings enable exceptions.
+
+
+---
+
+## 7. Next Steps & Related Content
+
+- Explore [Assertions Reference](https://google.github.io/googletest/reference/assertions.html) for the complete list of assertion macros.
+- Learn about [Matchers](https://google.github.io/googletest/reference/matchers.html) to write expressive predicates for assertions.
+- Step into [Writing First Tests](../getting-started/quickstart-validation/hello-test.md) to see assertions in action within complete test cases.
+- Deepen skills with [Mocking Reference](../docs/reference/mocking.md) when working with mock objects and expectations.
+
+---
+
+## 8. Practical Example: Verifying a Simple Function
+
+Let's write a test that verifies a function `Add(int a, int b)` correctly sums two integers.
+
+```cpp
+int Add(int a, int b) {
+  return a + b;
+}
+
+TEST(MathTest, AddsPositiveNumbers) {
+  EXPECT_EQ(Add(2, 3), 5) << "2 plus 3 should be 5";
+  EXPECT_NE(Add(2, 2), 5) << "2 plus 2 should not be 5";
+}
+```
+
+If this test fails, the output will clearly show which assertion failed, where, and why, helping you quickly identify and fix the issue.
+
+
+---
+
+## 9. Summary Diagram of Assertion Usage
+
+```mermaid
+flowchart TD
+  Start[Test Start] --> DefineCheck[Define What to Assert]
+  DefineCheck --> ChooseType{Choose Assertion Type}
+
+  ChooseType -->|Boolean| BoolAssert[EXPECT_TRUE / ASSERT_TRUE]
+  ChooseType -->|Equality| EqAssert[EXPECT_EQ / ASSERT_EQ]
+  ChooseType -->|String| StrAssert[EXPECT_STREQ / ASSERT_STREQ]
+  ChooseType -->|Float| FloatAssert[EXPECT_NEAR / EXPECT_FLOAT_EQ]
+  ChooseType -->|Exception| ExcAssert[EXPECT_THROW / EXPECT_NO_THROW]
+
+  BoolAssert --> Evaluate[Evaluate Condition]
+  EqAssert --> Evaluate
+  StrAssert --> Evaluate
+  FloatAssert --> Evaluate
+  ExcAssert --> Evaluate
+
+  Evaluate -->|Pass| Success[Test Pass]
+  Evaluate -->|Fail| LogFailure[Log Failure with Details]
+  LogFailure -->|Fatal| Abort[Test Abort]
+  LogFailure -->|Nonfatal| Continue[Test Continue]
+
+  Continue --> End[Test End]
+  Abort --> End
+  Success --> End
+```
+
+This flow outlines how users determine which assertion to use, how GoogleTest evaluates it, and the resulting test flow.
+
+---
+
+# Additional Resources
+
+- [GoogleTest Assertions Reference](https://google.github.io/googletest/reference/assertions.html)
+- [Using Matchers with ASSERT/EXPECT](https://google.github.io/googletest/reference/matchers.html)
+- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html#UsingMatchers)
+- [Your First GoogleTest Guide](https://google.github.io/googletest/quickstart.html)
+
+---
+
+For complete understanding, consult the [Getting Started](https://google.github.io/googletest/getting_started.html) and [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) documentation. These will deepen your grasp of assertions integrated with tests and mocks.
+
+
+---
